@@ -113,9 +113,9 @@
     (display "static const Object cProcs[] = {\n")
     (for-each (lambda (proc) (format #t "     Object::makeCProcedure(~a),\n" (proc-name->c-proc-name proc))) (reverse procs))
     (display "};\n")
-    (display "#ifdef ENABLE_PROFILER\n")
+;    (display "#ifdef ENABLE_PROFILER\n")
     (display "static const ucs4char* cProcNames[] = {\n")
     (for-each (lambda (proc) (format #t "     UC(~s),\n" proc)) (reverse procs))
     (display "};\n")
-    (display "#endif\n")
+;    (display "#endif\n")
     0))
